Major changes in 3.30.0:
* Updated translations

Major changes in 3.29.92:
* Better handle 401 status codes when adding calendars (Ralph Plawetzki)
* Updated translations

Major changes in 3.29.90:
* Add Night Light integration
* Bugfixes
* Updated translations

Major changes in 3.27.92:
* Flatpak improvements
* New unit tests
* Updates translations

Major changes in 3.27.90:
* Big code refactorings that lead to more stability and ease of maintainership
* Follow-up improvements after rewritting the Month view
* Flatpak Nightly now builds with debug and tracing enabled
* Huge memory leaks were fixed
* Updates translations

Major changes in 3.27.2:
* Events now are rendered differently if they are all-day or timed
* Rewrite of the Month view
    * Month cells have more transitions and effects
    * The day number is above the cells
    * A new overflow popup window was introduced
    * Right-to-left languages are fully working now
* Plug some memory leaks (Florian Brosch)
* Improve filename handling when adding new calendars (Florian Brosch)
* Updates translations

Major changes in 3.25.90:
* Port to Meson build system (Iñigo Martínez)
* Improve string in the quick add popover (Carlo Lobrano)
* Fix Month view's overflow detection (Abdullahi Usman)
* Add support for adding and modifying recurrences (Yash Singh)
* Grey out out-of-range cells in Month view
* Move remaining files to GPLv3 (Alex Benishek)
* Updated translations for:
    * Belarusian (Yuras Shumovich)
    * Catalan (Jordi Mas)
    * Croatian (gogo)
    * Czech (Marek Cernocky)
    * Friulian (Fabio Tomat)
    * Galician (Fran Dieguez)
    * German (Christian Kirbach)
    * Hungarian (Balázs Meskó)
    * Indonesian (Kukuh Syafaat)
    * Kazakh (Baurzhan Muftakhidinov)
    * Lithuanian (Aurimas Černius)
    * Nepali (Pawan Chitrakar)
    * Norwegian bokmål (Kjartan Maraas)
    * Slovak (Dušan Kazik)
    * Slovenian (Matej Urbančič)
    * Spanish (Daniel Mustieles)
    * Turkish (Emin Tufan Çetin)
