@@ -1,3 +1,7 @@
+Major changes in 3.30.1:
+* Reimplement timezone management when editing events
+* Updated translations
+
 Major changes in 3.30.0:
 * Updated translations
 
